Trilium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trilium
  labels:
    app.kubernetes.io/name: trilium
